--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
   </noscript>
   <div id="app"></div>
 
-
+  <script type="module" src="/src/main.js"></script>
   <script type="module" src="src/index.ts"></script>
 
 </body>
